Streamlined tests